--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: >-
 keywords: piráti, česká pirátská strana, svoboda, demokracie, název města, zkratka města, místní združení,
 
 administrator:
-  email: to@pirati.cz # mail kam pujdou chybove vystupy
+  email: eltkaca@gmail.com # mail kam pujdou chybove vystupy
 
 organization:
   name: Jmeno skupiny používající web - př Pirástá strana
